// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationFlow mostra fluxo principal quando logado 1`] = `
{
  "children": [
    {
      "children": null,
      "props": {
        "onInsetsChange": [Function],
        "style": [
          {
            "flex": 1,
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      },
      "type": "RNCSafeAreaProvider",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                "",
                              ],
                              "props": {
                                "allowFontScaling": false,
                                "selectable": false,
                                "style": [
                                  {
                                    "color": "#FFFFFF",
                                    "fontSize": 26,
                                  },
                                  undefined,
                                  {
                                    "fontFamily": "FontAwesome",
                                    "fontStyle": "normal",
                                    "fontWeight": "normal",
                                  },
                                  {},
                                ],
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": [
                              {
                                "alignItems": "center",
                                "justifyContent": "center",
                              },
                              undefined,
                            ],
                          },
                          "type": "View",
                        },
                        {
                          "children": [
                            "Início",
                          ],
                          "props": {
                            "style": {
                              "color": "#FFFFFF",
                              "fontSize": 20,
                              "marginLeft": 10,
                            },
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {
                        "style": {
                          "alignItems": "center",
                          "backgroundColor": "#1E1E3F",
                          "flexDirection": "row",
                          "padding": 10,
                        },
                      },
                      "type": "View",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    "Olá, ",
                                    "User",
                                    "!",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#FFFFFF",
                                      "fontSize": 24,
                                      "fontWeight": "bold",
                                    },
                                  },
                                  "type": "Text",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        "Sair",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#FDD835",
                                          "fontSize": 16,
                                          "fontWeight": "bold",
                                        },
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityState": {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    },
                                    "accessibilityValue": {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    },
                                    "accessible": true,
                                    "collapsable": false,
                                    "focusable": true,
                                    "onClick": [Function],
                                    "onResponderGrant": [Function],
                                    "onResponderMove": [Function],
                                    "onResponderRelease": [Function],
                                    "onResponderTerminate": [Function],
                                    "onResponderTerminationRequest": [Function],
                                    "onStartShouldSetResponder": [Function],
                                    "style": {
                                      "opacity": 1,
                                    },
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "style": {
                                  "alignItems": "center",
                                  "backgroundColor": "#1E1E3F",
                                  "flexDirection": "row",
                                  "padding": 10,
                                },
                              },
                              "type": "View",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    "Seu QR Code de Fidelidade",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#FFFFFF",
                                      "fontSize": 18,
                                      "fontWeight": "bold",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                  },
                                  "type": "Text",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            "QR Code indisponível",
                                          ],
                                          "props": {
                                            "style": {
                                              "color": "#B0B0B0",
                                              "textAlign": "center",
                                            },
                                          },
                                          "type": "Text",
                                        },
                                      ],
                                      "props": {
                                        "style": [
                                          {
                                            "backgroundColor": "#FFFFFF",
                                            "borderRadius": 8,
                                            "height": 200,
                                            "width": 200,
                                          },
                                          {
                                            "alignItems": "center",
                                            "justifyContent": "center",
                                          },
                                        ],
                                      },
                                      "type": "View",
                                    },
                                  ],
                                  "props": {
                                    "style": {
                                      "alignItems": "center",
                                    },
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "style": {
                                  "backgroundColor": "#1E1E3F",
                                  "borderRadius": 12,
                                  "elevation": 5,
                                  "marginBottom": 20,
                                  "padding": 20,
                                  "shadowColor": "#000",
                                  "shadowOffset": {
                                    "height": 4,
                                    "width": 0,
                                  },
                                  "shadowOpacity": 0.3,
                                  "shadowRadius": 5,
                                  "width": "100%",
                                },
                              },
                              "type": "View",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    "Resumo de Pontos",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#FFFFFF",
                                      "fontSize": 18,
                                      "fontWeight": "bold",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                  },
                                  "type": "Text",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        "Total de Pontos:",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#B0B0B0",
                                          "fontSize": 16,
                                        },
                                      },
                                      "type": "Text",
                                    },
                                    {
                                      "children": [
                                        "0",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#FFFFFF",
                                          "fontSize": 16,
                                          "fontWeight": "bold",
                                        },
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "style": {
                                      "flexDirection": "row",
                                      "justifyContent": "space-between",
                                      "marginBottom": 10,
                                    },
                                  },
                                  "type": "View",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        "Última Loja Visitada:",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#B0B0B0",
                                          "fontSize": 16,
                                        },
                                      },
                                      "type": "Text",
                                    },
                                    {
                                      "children": [
                                        "Nenhuma",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#FFFFFF",
                                          "fontSize": 16,
                                          "fontWeight": "bold",
                                        },
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "style": {
                                      "flexDirection": "row",
                                      "justifyContent": "space-between",
                                      "marginBottom": 10,
                                    },
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "style": {
                                  "backgroundColor": "#1E1E3F",
                                  "borderRadius": 12,
                                  "elevation": 5,
                                  "marginBottom": 20,
                                  "padding": 20,
                                  "shadowColor": "#000",
                                  "shadowOffset": {
                                    "height": 4,
                                    "width": 0,
                                  },
                                  "shadowOpacity": 0.3,
                                  "shadowRadius": 5,
                                  "width": "100%",
                                },
                              },
                              "type": "View",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        "Ver Extrato Completo",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#FFFFFF",
                                          "fontSize": 16,
                                          "fontWeight": "bold",
                                        },
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityState": {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    },
                                    "accessibilityValue": {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    },
                                    "accessible": true,
                                    "collapsable": false,
                                    "focusable": true,
                                    "onClick": [Function],
                                    "onResponderGrant": [Function],
                                    "onResponderMove": [Function],
                                    "onResponderRelease": [Function],
                                    "onResponderTerminate": [Function],
                                    "onResponderTerminationRequest": [Function],
                                    "onStartShouldSetResponder": [Function],
                                    "style": {
                                      "alignItems": "center",
                                      "backgroundColor": "#3D5CFF",
                                      "borderRadius": 8,
                                      "marginTop": 10,
                                      "opacity": 1,
                                      "paddingHorizontal": 15,
                                      "paddingVertical": 12,
                                    },
                                  },
                                  "type": "View",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        "Explorar Lojas",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#FFFFFF",
                                          "fontSize": 16,
                                          "fontWeight": "bold",
                                        },
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityState": {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    },
                                    "accessibilityValue": {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    },
                                    "accessible": true,
                                    "collapsable": false,
                                    "focusable": true,
                                    "onClick": [Function],
                                    "onResponderGrant": [Function],
                                    "onResponderMove": [Function],
                                    "onResponderRelease": [Function],
                                    "onResponderTerminate": [Function],
                                    "onResponderTerminationRequest": [Function],
                                    "onStartShouldSetResponder": [Function],
                                    "style": {
                                      "alignItems": "center",
                                      "backgroundColor": "#3D5CFF",
                                      "borderRadius": 8,
                                      "marginTop": 10,
                                      "opacity": 1,
                                      "paddingHorizontal": 15,
                                      "paddingVertical": 12,
                                    },
                                  },
                                  "type": "View",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        "Ver Prémios e Recompensas",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#FFFFFF",
                                          "fontSize": 16,
                                          "fontWeight": "bold",
                                        },
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityState": {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    },
                                    "accessibilityValue": {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    },
                                    "accessible": true,
                                    "collapsable": false,
                                    "focusable": true,
                                    "onClick": [Function],
                                    "onResponderGrant": [Function],
                                    "onResponderMove": [Function],
                                    "onResponderRelease": [Function],
                                    "onResponderTerminate": [Function],
                                    "onResponderTerminationRequest": [Function],
                                    "onStartShouldSetResponder": [Function],
                                    "style": {
                                      "alignItems": "center",
                                      "backgroundColor": "#3D5CFF",
                                      "borderRadius": 8,
                                      "marginTop": 10,
                                      "opacity": 1,
                                      "paddingHorizontal": 15,
                                      "paddingVertical": 12,
                                    },
                                  },
                                  "type": "View",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        "Editar Perfil",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#FFFFFF",
                                          "fontSize": 16,
                                          "fontWeight": "bold",
                                        },
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "accessibilityState": {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    },
                                    "accessibilityValue": {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    },
                                    "accessible": true,
                                    "collapsable": false,
                                    "focusable": true,
                                    "onClick": [Function],
                                    "onResponderGrant": [Function],
                                    "onResponderMove": [Function],
                                    "onResponderRelease": [Function],
                                    "onResponderTerminate": [Function],
                                    "onResponderTerminationRequest": [Function],
                                    "onStartShouldSetResponder": [Function],
                                    "style": {
                                      "alignItems": "center",
                                      "backgroundColor": "#3D5CFF",
                                      "borderRadius": 8,
                                      "marginTop": 10,
                                      "opacity": 1,
                                      "paddingHorizontal": 15,
                                      "paddingVertical": 12,
                                    },
                                  },
                                  "type": "View",
                                },
                              ],
                              "props": {
                                "style": {
                                  "marginTop": 10,
                                  "width": "100%",
                                },
                              },
                              "type": "View",
                            },
                          ],
                          "props": {},
                          "type": "View",
                        },
                      ],
                      "props": {
                        "contentContainerStyle": {
                          "paddingBottom": 20,
                          "paddingHorizontal": 20,
                        },
                      },
                      "type": "RCTScrollView",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "#0A0A2A",
                      "flex": 1,
                    },
                  },
                  "type": "RCTSafeAreaView",
                },
              ],
              "props": {
                "collapsable": false,
                "style": [
                  {
                    "flex": 1,
                  },
                  [
                    {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ],
              },
              "type": "RNSScreenContentWrapper",
            },
            {
              "children": null,
              "props": {
                "backButtonDisplayMode": undefined,
                "backButtonInCustomView": false,
                "backTitle": undefined,
                "backTitleFontFamily": "System",
                "backTitleFontSize": undefined,
                "backTitleVisible": true,
                "backgroundColor": "rgb(255, 255, 255)",
                "blurEffect": undefined,
                "color": "rgb(0, 122, 255)",
                "direction": "ltr",
                "disableBackButtonMenu": false,
                "hidden": true,
                "hideBackButton": false,
                "hideShadow": undefined,
                "largeTitle": undefined,
                "largeTitleBackgroundColor": undefined,
                "largeTitleColor": undefined,
                "largeTitleFontFamily": "System",
                "largeTitleFontSize": undefined,
                "largeTitleFontWeight": "700",
                "largeTitleHideShadow": false,
                "pointerEvents": "box-none",
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "position": "absolute",
                  "width": "100%",
                },
                "title": "Home",
                "titleColor": "rgb(28, 28, 30)",
                "titleFontFamily": "System",
                "titleFontSize": undefined,
                "titleFontWeight": "600",
                "topInsetEnabled": true,
                "translucent": false,
              },
              "type": "RNSScreenStackHeaderConfig",
            },
          ],
          "props": {
            "activityState": 2,
            "aria-hidden": false,
            "collapsable": false,
            "customAnimationOnSwipe": undefined,
            "fullScreenSwipeEnabled": undefined,
            "fullScreenSwipeShadowEnabled": true,
            "gestureEnabled": undefined,
            "gestureResponseDistance": {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            },
            "hasLargeHeader": false,
            "hideKeyboardOnSwipe": undefined,
            "homeIndicatorHidden": undefined,
            "nativeBackButtonDismissalEnabled": false,
            "navigationBarHidden": undefined,
            "onAppear": [Function],
            "onDisappear": [Function],
            "onDismissed": [Function],
            "onGestureCancel": [Function],
            "onHeaderBackButtonClicked": [Function],
            "onHeaderHeightChange": [Function],
            "onNativeDismissCancelled": [Function],
            "onSheetDetentChanged": [Function],
            "onTransitionProgress": [Function],
            "onWillAppear": [Function],
            "onWillDisappear": [Function],
            "preventNativeDismiss": undefined,
            "replaceAnimation": "push",
            "screenOrientation": undefined,
            "sheetAllowedDetents": [
              1,
            ],
            "sheetCornerRadius": -1,
            "sheetElevation": 24,
            "sheetExpandsWhenScrolledToEdge": true,
            "sheetGrabberVisible": false,
            "sheetInitialDetent": 0,
            "sheetInitialDetentIndex": 0,
            "sheetLargestUndimmedDetent": -1,
            "sheetLargestUndimmedDetentIndex": -1,
            "stackAnimation": undefined,
            "stackPresentation": "push",
            "statusBarAnimation": undefined,
            "statusBarHidden": undefined,
            "statusBarStyle": undefined,
            "style": {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            },
            "swipeDirection": "horizontal",
            "transitionDuration": undefined,
          },
          "type": "RNSScreen",
        },
      ],
      "props": {
        "onFinishTransitioning": undefined,
        "style": {
          "flex": 1,
        },
      },
      "type": "RNSScreenStack",
    },
  ],
  "props": {
    "onInsetsChange": [Function],
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "RNCSafeAreaProvider",
}
`;

exports[`NavigationFlow mostra telas de autenticação quando não logado 1`] = `
{
  "children": [
    {
      "children": null,
      "props": {
        "onInsetsChange": [Function],
        "style": [
          {
            "flex": 1,
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      },
      "type": "RNCSafeAreaProvider",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                "",
                              ],
                              "props": {
                                "allowFontScaling": false,
                                "selectable": false,
                                "style": [
                                  {
                                    "color": "#FFFFFF",
                                    "fontSize": 26,
                                  },
                                  undefined,
                                  {
                                    "fontFamily": "FontAwesome",
                                    "fontStyle": "normal",
                                    "fontWeight": "normal",
                                  },
                                  {},
                                ],
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": [
                              {
                                "alignItems": "center",
                                "justifyContent": "center",
                              },
                              undefined,
                            ],
                          },
                          "type": "View",
                        },
                        {
                          "children": [
                            "Login",
                          ],
                          "props": {
                            "style": {
                              "color": "#FFFFFF",
                              "fontSize": 20,
                              "marginLeft": 10,
                            },
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {
                        "style": {
                          "alignItems": "center",
                          "backgroundColor": "#1E1E3F",
                          "flexDirection": "row",
                          "padding": 10,
                        },
                      },
                      "type": "View",
                    },
                    {
                      "children": [
                        {
                          "children": null,
                          "props": {
                            "source": {
                              "testUri": "../../../src/assets/images/logo_fideliza.png",
                            },
                            "style": {
                              "height": 140,
                              "marginBottom": 20,
                              "width": 200,
                            },
                          },
                          "type": "Image",
                        },
                        {
                          "children": [
                            "Fideliza+",
                          ],
                          "props": {
                            "style": {
                              "color": "#FFFFFF",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 10,
                            },
                          },
                          "type": "Text",
                        },
                        {
                          "children": [
                            "O programa de fidelidade que te valoriza",
                          ],
                          "props": {
                            "style": {
                              "color": "#FFFFFF",
                              "fontSize": 16,
                              "marginBottom": 20,
                            },
                          },
                          "type": "Text",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                "Email",
                              ],
                              "props": {
                                "style": {
                                  "color": "#FFFFFF",
                                  "fontSize": 16,
                                  "fontWeight": "500",
                                  "marginBottom": 8,
                                },
                              },
                              "type": "Text",
                            },
                            {
                              "children": null,
                              "props": {
                                "autoCapitalize": "none",
                                "keyboardType": "email-address",
                                "onChangeText": [Function],
                                "placeholder": "Digite seu e-mail",
                                "placeholderTextColor": "#8A8A8A",
                                "style": {
                                  "backgroundColor": "transparent",
                                  "borderColor": "#FFFFFF",
                                  "borderRadius": 12,
                                  "borderWidth": 1,
                                  "color": "#FFFFFF",
                                  "fontSize": 16,
                                  "paddingHorizontal": 15,
                                  "paddingVertical": 12,
                                  "width": "100%",
                                },
                                "value": "",
                              },
                              "type": "TextInput",
                            },
                          ],
                          "props": {
                            "style": {
                              "marginBottom": 20,
                              "width": "100%",
                            },
                          },
                          "type": "View",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                "Senha",
                              ],
                              "props": {
                                "style": {
                                  "color": "#FFFFFF",
                                  "fontSize": 16,
                                  "fontWeight": "500",
                                  "marginBottom": 8,
                                },
                              },
                              "type": "Text",
                            },
                            {
                              "children": null,
                              "props": {
                                "onChangeText": [Function],
                                "placeholder": "Digite sua senha",
                                "placeholderTextColor": "#8A8A8A",
                                "secureTextEntry": true,
                                "style": {
                                  "backgroundColor": "transparent",
                                  "borderColor": "#FFFFFF",
                                  "borderRadius": 12,
                                  "borderWidth": 1,
                                  "color": "#FFFFFF",
                                  "fontSize": 16,
                                  "paddingHorizontal": 15,
                                  "paddingVertical": 12,
                                  "width": "100%",
                                },
                                "value": "",
                              },
                              "type": "TextInput",
                            },
                          ],
                          "props": {
                            "style": {
                              "marginBottom": 20,
                              "width": "100%",
                            },
                          },
                          "type": "View",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                "Entrar",
                              ],
                              "props": {
                                "style": {
                                  "color": "#FFFFFF",
                                  "fontSize": 18,
                                  "fontWeight": "bold",
                                },
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "accessibilityState": {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": false,
                              "expanded": undefined,
                              "selected": undefined,
                            },
                            "accessibilityValue": {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            },
                            "accessible": true,
                            "collapsable": false,
                            "focusable": true,
                            "onClick": [Function],
                            "onResponderGrant": [Function],
                            "onResponderMove": [Function],
                            "onResponderRelease": [Function],
                            "onResponderTerminate": [Function],
                            "onResponderTerminationRequest": [Function],
                            "onStartShouldSetResponder": [Function],
                            "style": {
                              "alignItems": "center",
                              "backgroundColor": "#3D5CFF",
                              "borderRadius": 12,
                              "marginTop": 10,
                              "opacity": 1,
                              "padding": 15,
                              "width": "100%",
                            },
                          },
                          "type": "View",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    "Esqueceu a senha? ",
                                    {
                                      "children": [
                                        "Clique aqui.",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#FDD835",
                                          "fontWeight": "bold",
                                        },
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#B0B0B0",
                                      "fontSize": 14,
                                      "marginBottom": 10,
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "accessibilityState": {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": undefined,
                                  "expanded": undefined,
                                  "selected": undefined,
                                },
                                "accessibilityValue": {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                },
                                "accessible": true,
                                "collapsable": false,
                                "focusable": true,
                                "onClick": [Function],
                                "onResponderGrant": [Function],
                                "onResponderMove": [Function],
                                "onResponderRelease": [Function],
                                "onResponderTerminate": [Function],
                                "onResponderTerminationRequest": [Function],
                                "onStartShouldSetResponder": [Function],
                                "style": {
                                  "opacity": 1,
                                },
                              },
                              "type": "View",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    "Não tem conta? ",
                                    {
                                      "children": [
                                        "Clique aqui.",
                                      ],
                                      "props": {
                                        "style": {
                                          "color": "#FDD835",
                                          "fontWeight": "bold",
                                        },
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#B0B0B0",
                                      "fontSize": 14,
                                      "marginBottom": 10,
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "accessibilityState": {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": undefined,
                                  "expanded": undefined,
                                  "selected": undefined,
                                },
                                "accessibilityValue": {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                },
                                "accessible": true,
                                "collapsable": false,
                                "focusable": true,
                                "onClick": [Function],
                                "onResponderGrant": [Function],
                                "onResponderMove": [Function],
                                "onResponderRelease": [Function],
                                "onResponderTerminate": [Function],
                                "onResponderTerminationRequest": [Function],
                                "onStartShouldSetResponder": [Function],
                                "style": {
                                  "opacity": 1,
                                },
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "style": {
                              "alignItems": "center",
                              "marginTop": 30,
                            },
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "style": {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                          "padding": 20,
                        },
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "#0A0A2A",
                      "flex": 1,
                    },
                  },
                  "type": "RCTSafeAreaView",
                },
              ],
              "props": {
                "collapsable": false,
                "style": [
                  {
                    "flex": 1,
                  },
                  [
                    {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ],
              },
              "type": "RNSScreenContentWrapper",
            },
            {
              "children": null,
              "props": {
                "backButtonDisplayMode": undefined,
                "backButtonInCustomView": false,
                "backTitle": undefined,
                "backTitleFontFamily": "System",
                "backTitleFontSize": undefined,
                "backTitleVisible": true,
                "backgroundColor": "rgb(255, 255, 255)",
                "blurEffect": undefined,
                "color": "rgb(0, 122, 255)",
                "direction": "ltr",
                "disableBackButtonMenu": false,
                "hidden": true,
                "hideBackButton": false,
                "hideShadow": undefined,
                "largeTitle": undefined,
                "largeTitleBackgroundColor": undefined,
                "largeTitleColor": undefined,
                "largeTitleFontFamily": "System",
                "largeTitleFontSize": undefined,
                "largeTitleFontWeight": "700",
                "largeTitleHideShadow": false,
                "pointerEvents": "box-none",
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "position": "absolute",
                  "width": "100%",
                },
                "title": "Login",
                "titleColor": "rgb(28, 28, 30)",
                "titleFontFamily": "System",
                "titleFontSize": undefined,
                "titleFontWeight": "600",
                "topInsetEnabled": true,
                "translucent": false,
              },
              "type": "RNSScreenStackHeaderConfig",
            },
          ],
          "props": {
            "activityState": 2,
            "aria-hidden": false,
            "collapsable": false,
            "customAnimationOnSwipe": undefined,
            "fullScreenSwipeEnabled": undefined,
            "fullScreenSwipeShadowEnabled": true,
            "gestureEnabled": undefined,
            "gestureResponseDistance": {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            },
            "hasLargeHeader": false,
            "hideKeyboardOnSwipe": undefined,
            "homeIndicatorHidden": undefined,
            "nativeBackButtonDismissalEnabled": false,
            "navigationBarHidden": undefined,
            "onAppear": [Function],
            "onDisappear": [Function],
            "onDismissed": [Function],
            "onGestureCancel": [Function],
            "onHeaderBackButtonClicked": [Function],
            "onHeaderHeightChange": [Function],
            "onNativeDismissCancelled": [Function],
            "onSheetDetentChanged": [Function],
            "onTransitionProgress": [Function],
            "onWillAppear": [Function],
            "onWillDisappear": [Function],
            "preventNativeDismiss": undefined,
            "replaceAnimation": "push",
            "screenOrientation": undefined,
            "sheetAllowedDetents": [
              1,
            ],
            "sheetCornerRadius": -1,
            "sheetElevation": 24,
            "sheetExpandsWhenScrolledToEdge": true,
            "sheetGrabberVisible": false,
            "sheetInitialDetent": 0,
            "sheetInitialDetentIndex": 0,
            "sheetLargestUndimmedDetent": -1,
            "sheetLargestUndimmedDetentIndex": -1,
            "stackAnimation": undefined,
            "stackPresentation": "push",
            "statusBarAnimation": undefined,
            "statusBarHidden": undefined,
            "statusBarStyle": undefined,
            "style": {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            },
            "swipeDirection": "horizontal",
            "transitionDuration": undefined,
          },
          "type": "RNSScreen",
        },
      ],
      "props": {
        "onFinishTransitioning": undefined,
        "style": {
          "flex": 1,
        },
      },
      "type": "RNSScreenStack",
    },
  ],
  "props": {
    "onInsetsChange": [Function],
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "RNCSafeAreaProvider",
}
`;
